Add open data results csv for arXiv

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -1,10 +1,12 @@
 ---
-title: "Reproducibility of COVID-19 pre-prints on medRxiv in 2020"
+title: "Reproducibility of COVID-19 pre-prints in 2020"
 subtitle: "Markers of open code or data not found in 81 per cent of pre-prints"
-author: "Annie Collins^[University of Toronto.]"
-thanks: "Paper presented at Toronto Workshop on Reproducibility, 26 February 2021. Collins thanks CANSSI Ontario for financial support. Code and data are available at: https://github.com/anniecollins/reproducibility."
+author: 
+  - Annie Collins^[University of Toronto.]
+  - Rohan Alexander^[University of Toronto, rohan.alexander@utoronto.ca.]
+thanks: "Collins thanks CANSSI Ontario for financial support. Code and data are available at: https://github.com/anniecollins/reproducibility."
 date: "`r format(Sys.time(), '%d %B %Y')`"
-abstract: "We create a dataset of all the pre-prints published on medRxiv between 28 January 2020 and 31 January 2021. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. We are unable to find markers of either open data or open code for 81 per cent of the pre-prints in our sample. Our paper demonstrates the need to have authors categorize the degree of openness of their pre-print as part of the medRxiv submissions process, and more broadly, the need to better integrate open science training into a wide range of fields."
+abstract: "We create a dataset of all the pre-prints published on arXiv and medRxiv between 28 January 2020 and 31 January 2021. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. We are unable to find markers of either open data or open code for 81 per cent of the pre-prints on medRxiv  in our sample, and X per cent of those on arXiv in our sample. Our paper demonstrates the need to have authors categorize the degree of openness of their pre-print as part of the pre-print submissions process, and more broadly, the need to better integrate open science training into a wide range of fields."
 output:
   bookdown::pdf_document2:
 toc: FALSE
