--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -3,7 +3,6 @@ title: "Reproducibility of COVID-19 pre-prints in 2020"
 subtitle: "Markers of open code or data not found in 81 per cent of pre-prints"
 author: 
   - Annie Collins^[University of Toronto.]
-  - Rohan Alexander^[University of Toronto, rohan.alexander@utoronto.ca.]
 thanks: "Collins thanks CANSSI Ontario for financial support. Code and data are available at: https://github.com/anniecollins/reproducibility."
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "We create a dataset of all the pre-prints published on arXiv and medRxiv between 28 January 2020 and 31 January 2021. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. We are unable to find markers of either open data or open code for 81 per cent of the pre-prints on medRxiv  in our sample, and X per cent of those on arXiv in our sample. Our paper demonstrates the need to have authors categorize the degree of openness of their pre-print as part of the pre-print submissions process, and more broadly, the need to better integrate open science training into a wide range of fields."
@@ -27,9 +26,20 @@ library(stargazer)
 
 
 ```{r loaddata, include=FALSE}
-med_open_data_results <- read_csv(here("outputs/data/med_open_data_results.csv"))
+med_open_data_results <- 
+  read_csv(here::here("outputs/data/med_open_data_results.csv"))
+med_results <- 
+  read_csv(here::here("outputs/data/med_results.csv")) # All COVID medRxiv papers (9,929)
 
-med_results <- read_csv(here::here("outputs/data/med_results.csv")) # All COVID medRxiv papers (9,929)
+arxiv_open_data_results <- 
+  read_csv(here::here("outputs/data/arxiv_open_data_results.csv"))
+all_arxiv_results <- 
+  read_csv(here::here("outputs/data/arxiv_results.csv"))
+
+all_arxiv_results <- 
+  all_arxiv_results %>% 
+  mutate(submitted = as_date(submitted),
+         updated = as_date(updated))
 ```
 
 
@@ -55,19 +65,35 @@ We then selected a random sample of these papers (N = 1,200) to check for open d
 
 Our final dataset was formed by joining these two tables together via DOI to form a dataset including all original, qualitative information for each pre-print alongside its open data and open code status and markers. 
 
-```{r monthly-papers-total, fig.cap = "Number of pre-prints related to COVID-19 posted to medRxiv", out.width="90%", fig.align = "center"}
-med_results %>% 
-  group_by(month = floor_date(date, "month")) %>% 
-  summarise(count=n()) %>% 
-  ggplot(aes(month, count)) + 
-  # geom_line(stat="identity") +
-  geom_col() + 
+
+```{r monthly-papers-total, fig.cap = "Number of pre-prints related to COVID-19 posted to arXiv and medRxiv", out.width="90%", fig.align = "center"}
+just_arxiv <- 
+  all_arxiv_results  %>% 
+  select(submitted) %>% 
+  mutate(type = "arXiv") %>% 
+  rename(date = submitted)
+
+just_medRxiv <- 
+  med_results  %>% 
+  select(date) %>% 
+  mutate(type = "medRxiv")
+
+both <- rbind(just_arxiv, just_medRxiv)
+
+both %>% 
+  mutate(month = floor_date(date, "month")) %>% 
+  filter(year(date) >= 2020) %>% 
+  ggplot(aes(x = month)) + 
+  geom_histogram(aes(fill = type), stat="count", position = "dodge") + 
   labs(title = "Pre-prints posted per month",
-       subtitle = "medRxiv, Total = 9,929",
+       subtitle = "Total of 3,379 on arXiv and 9,929 on medRxiv",
        x = "Month",
-       y = "Number of pre-prints") +
+       y = "Number of pre-prints",
+       fill = "Repository") +
   theme_minimal()
 ```
+
+
 
 ## Summary statistics
 
