Updates to paper and socarxiv scripts

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -23,6 +23,7 @@ library(lubridate)
 library(tidyverse)
 library(stargazer)
 library(wesanderson)
+library(kableExtra)
 ```
 
 
@@ -41,6 +42,11 @@ arxiv_open_data_results <-
   read_csv(here::here("outputs/data/arxiv_open_data_results.csv"))
 all_arxiv_results <- 
   read_csv(here::here("outputs/data/arxiv_results.csv"))
+
+socarxiv_open_data_results <- 
+  read_csv(here::here("outputs/data/socarxiv_open_data_results.csv"))
+socarxiv_results <- 
+  read_csv(here::here("outputs/data/socarxiv_results.csv")) # All COVID medRxiv papers (9,929)  
 
 all_arxiv_results <- 
   all_arxiv_results %>% 
@@ -68,7 +74,7 @@ Our primary dataset consists of information extracted from the arXiv, bioRxiv, m
 
 We constructed this dataset by first creating a local copy of the repository using the repository API. We identified papers related to the COVID-19 pandemic through several keyword searches to create our dataset of papers and associated metadata. This metadata varies by repository, but generally includes the following information: title, abstract, author(s), date posted, research field, DOI, version number, corresponding author, corresponding author's institutional affiliation, and published DOI (if the pre-prints has since been published in a peer-reviewed journal). In the case of SocArXiv there are additionally fields that are self-reported by the submitting author about the availability of code and data.
 
-We then checked these pre-prints for open data and code markers using the ODDPub algorithm. This required downloading each pre-print as a PDF and then converting the PDFs to text files. We then conducted the open data and open code detection procedure. This involved searching for keywords and other markers of open data and open code such as references to GitHub repositories and similar. A full listing of these markers is included in Appendix \@ref(markers). This was conducted using the `open_data_search()` function from the `oddpub` package.
+We then checked these pre-prints for open data and code markers using the ODDPub algorithm. This required downloading each pre-print as a PDF and then converting the PDFs to text files. Some papers from SocArxiv were only available in .docx format and were downloaded as such instead. We then conducted the open data and open code detection procedure. This involved searching for keywords and other markers of open data and open code such as references to GitHub repositories and similar. A full listing of these markers is included in Appendix \@ref(markers). This was conducted using the `open_data_search()` function from the `oddpub` package.
 
 The result of this process is a dataset indicating the presence of open data or open code markers in each pre-print (with a binary variable for each marker, and the relevant open data or open code statements when applicable). Our final analysis dataset was formed by joining these two datasets together, typically using the DOI or the unique filename, to form a dataset including all original, qualitative metadata information for each pre-print alongside its open data and open code status and markers. 
 
@@ -89,15 +95,21 @@ just_bioRxiv <-
   select(date) %>% 
   mutate(type = "bioRxiv")
 
-all <- rbind(just_arxiv, just_medRxiv, just_bioRxiv)
+just_socarxiv <- 
+  socarxiv_results  %>% 
+  select(date_created) %>%
+  rename(date = "date_created") %>%
+  mutate(type = "socArXiv")
+
+all <- rbind(just_arxiv, just_medRxiv, just_bioRxiv, just_socarxiv)
 
 all %>% 
   mutate(month = floor_date(date, "month")) %>% 
   filter(year(date) >= 2020) %>% 
   ggplot(aes(x = month)) + 
   geom_histogram(aes(fill = type), stat="count", position = "dodge") + 
-  labs(title = "Pre-prints posted per month",
-       subtitle = "Total of 3,379 relevant pre-prints on arXiv, 3,031 on bioRxiv, 9,929 on medRxiv",
+  labs(title = "COVID-19-related pre-prints posted per month",
+       subtitle = "Total of 3,812 relevant pre-prints on arXiv, 3,714 on bioRxiv, 12,060 on medRxiv, 444 on socArXiv",
        x = "Month",
        y = "Number of pre-prints",
        fill = "Repository") +
@@ -113,40 +125,77 @@ The number of pre-prints posted per month increased dramatically between January
 
 Broadly, we are unable to find markers of either open data or open code for around 81 per cent of the 1,200 sampled pre-prints. The remaining 19 per cent of pre-prints was comprised of 4 per cent of the sample containing markers for open code, 8 per cent of the sample with markers for open data, and 7 per cent of the sample with markers for both open data and open code (Table \@ref(tab:summarycounts-medRxiv)).
 
-```{r summarycounts-medRxiv}
+```{r summarycounts-medRxiv, }
 # open data/open code count summary table
-med_open_data_results %>% 
+
+just_arxiv <-
+  arxiv_open_data_results  %>%
+  select(submitted, is_open_data, is_open_code) %>%
+  mutate(type = "arXiv") %>%
+  rename(date = submitted)
+
+just_medRxiv <-
+  med_open_data_results  %>%
+  select(date, is_open_data, is_open_code) %>%
+  mutate(type = "medRxiv")
+
+just_bioRxiv <-
+  bio_open_data_results  %>%
+  select(date, is_open_data, is_open_code) %>%
+  mutate(type = "bioRxiv")
+
+just_socarxiv <-
+  socarxiv_open_data_results  %>%
+  select(date_created, is_open_data, is_open_code) %>%
+  rename(date = "date_created") %>%
+  mutate(type = "socArXiv")
+
+all <- rbind(just_arxiv, just_medRxiv, just_bioRxiv, just_socarxiv)
+
+all %>%
+  group_by(type) %>%
   count(is_open_data, is_open_code) %>%
   mutate(prop_total = n / sum(n)) %>%
   mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
-         is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>% 
+         is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
+  ungroup() %>%
+  select(is_open_data, is_open_code, n, prop_total) %>%
   kable(col.names = c("Open data markers", "Open code markers", "Count", "Proportion of total"),
         caption = "Counts and proportions of open data and code markers in medRxiv sample",
         booktabs = TRUE,
-        digits = 2)
-```
-
-```{r summarycounts-bioRxiv}
-# open data/open code count summary table
-bio_open_data_results %>% 
-  count(is_open_data, is_open_code) %>%
-  mutate(prop_total = n / sum(n)) %>%
-  mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
-         is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>% 
-  kable(col.names = c("Open data markers", "Open code markers", "Count", "Proportion of total"),
-        caption = "Counts and proportions of open data and code markers in bioRxiv sample",
-        booktabs = TRUE,
-        digits = 2)
+        digits = 2) %>%
+  group_rows(index = c("arXiv" = 4, "bioRxiv" = 4, "medRxiv" = 4, "socArXiv" = 4))
 ```
 
 The distribution of total sampled pre-prints and sampled pre-prints with open data or code markers roughly follows that of COVID-19-related pre-prints posted in general (Figure \@ref(fig:monthly-papers-condition-stack)). The proportion of pre-prints with open data or code has fluctuated over time but shows no consistent overall increase or decrease throughout the course of the pandemic, nor in conjunction with increases or decreases in the total number of pre-prints posted to medRxiv (Figure \@ref(fig:monthly-proportion-of-open)). In our dataset, only one pre-print was sampled for the month of January 2020. This pre-print contained neither open data nor open code markers, thus the 0 per cent rate of open data and code for this month will be treated as an outlier, and removed modelling purposes.
 
 ```{r monthly-papers-condition-stack, fig.cap = "Number of pre-prints related to COVID-19 sampled from medRxiv, distinguished by presence of open data or code markers", out.width="90%", fig.align = "center"}
 # Number of papers for each open data/code status per month
-open_status <- 
+open_status_med <- 
   med_open_data_results %>% 
   select(title, date, is_open_code, is_open_data) %>% 
-  mutate(condition = is_open_data + is_open_code)
+  mutate(condition = is_open_data + is_open_code, repo = "medRxiv")
+
+open_status_bio <- 
+  bio_open_data_results %>% 
+  select(title, date, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code, repo = "bioRxiv")
+
+open_status_arxiv <- 
+  arxiv_open_data_results %>% 
+  select(title, submitted, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code, repo = "arXiv") %>%
+  rename(date = submitted)
+
+open_status_socarxiv <- 
+  socarxiv_open_data_results %>% 
+  select(title, date_created, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code, repo = "socArXiv") %>%
+  rename(date = date_created)
+
+open_status <- rbind(open_status_med, open_status_bio, open_status_arxiv, open_status_socarxiv)
+
+
 open_status$condition[open_status$condition == 2] <- "Both"
 open_status$condition[open_status$condition == 0] <- "Neither"
 open_status$condition[open_status$condition == 1 & open_status$is_open_code == 1] <- "Open Code"
@@ -158,32 +207,58 @@ open_status %>%
                fill=factor(condition, levels = c("Neither", "Open Code", "Open Data", "Both")), 
                position = "stack")) +
   labs(fill = "Type of marker") +
-  scale_x_discrete(breaks=c("2020-01-01","2020-04-01","2020-07-01", "2020-10-01", "2021-01-01"), 
-                   labels=c("Jan 2020","Apr 2020","Jul 2020", "Oct 2020", "Jan 2021")) +
+  scale_x_discrete(breaks=c("2020-01-01","2020-07-01", "2021-01-01"), 
+                   labels=c("Jan 2020", "Jul 2020", "Jan 2021")) +
   ylab("Number of pre-prints") +
   xlab("Month") +
   labs(title="Sampled pre-prints by month", subtitle="medRxiv, Total = 1,200") +
-  theme_minimal()
+  theme_minimal() +
+  scale_fill_manual(values = wes_palette("Darjeeling1")) +
+  facet_wrap(~repo)
 ```
 
 ```{r monthly-proportion-of-open, fig.cap= "Proportion of pre-prints in sample with open data or open code markers by month", out.width="90%", fig.align = "center"}
 # Proportion of papers posted with open data or open code each month
-colors <- c("Open Data" = "blue", "Open Code" = "green")
 med_month_sum_cov <- 
   med_open_data_results %>% 
   group_by(month = floor_date(date, "month")) %>% 
-  summarise(count=n(), prop_open_code = sum(is_open_code)/n(), prop_open_data = sum(is_open_data)/n()) %>% 
-  mutate(num_days = days_in_month(month),
-         daily_rate = count/num_days)
-med_month_sum_cov %>%
+  summarise(count = n(), "Open Code" = mean(is_open_code), "Open Data" = mean(is_open_data)) %>% 
+  mutate(daily_rate = count/days_in_month(month), repo = "medRxiv")
+
+bio_month_sum_cov <- 
+  bio_open_data_results %>% 
+  group_by(month = floor_date(date, "month")) %>% 
+  summarise(count = n(), "Open Code" = mean(is_open_code), "Open Data" = mean(is_open_data)) %>% 
+  mutate(daily_rate = count/days_in_month(month), repo = "bioRxiv")
+
+arxiv_month_sum_cov <- 
+  arxiv_open_data_results %>% 
+  group_by(month = floor_date(submitted, "month")) %>% 
+  summarise(count = n(), "Open Code" = mean(is_open_code), "Open Data" = mean(is_open_data)) %>% 
+  mutate(daily_rate = count/days_in_month(month), repo = "arXiv")
+
+socarxiv_month_sum_cov <- 
+  socarxiv_open_data_results %>% 
+  group_by(month = floor_date(date_created, "month")) %>% 
+  summarise(count = n(), "Open Code" = mean(is_open_code), "Open Data" = mean(is_open_data)) %>% 
+  mutate(daily_rate = count/days_in_month(month), repo = "socArXiv")
+
+month_sum_cov <- rbind(med_month_sum_cov, bio_month_sum_cov, arxiv_month_sum_cov, socarxiv_month_sum_cov) %>%
+  pivot_longer(cols = c("Open Data", "Open Code")) %>%
+  filter(value != 1) # Removes outliers where small number of papers in a month was sampled and both had open data/code
+
+# TODO: Fix date labels, facet_wrap labels
+month_sum_cov %>%
   ggplot() +
-  geom_line(data = med_month_sum_cov, aes(month, prop_open_data, color = "Open data")) +
-  geom_line(data = med_month_sum_cov, aes(month, prop_open_code, color = "Open code")) +
+  geom_line(data = month_sum_cov, aes(month, value, color = repo)) +
   ggtitle("Proportion of sampled pre-prints with open data or code markers") +
-  labs(colour = "Type of marker",
+  labs(colour = "Repository",
        x = "Month",
        y = "Proportion of pre-prints") + 
-  theme_minimal()
+  theme_minimal() +
+  scale_color_manual(values = wes_palette("Darjeeling1")) +
+  facet_wrap(~name)
+
 ```
 
 ## Publication status
@@ -191,22 +266,33 @@ med_month_sum_cov %>%
 In Table \@ref(tab:open-published-summary) we disaggregate pre-prints by whether there is an indication that it was published. We find that the proportion of pre-prints with open data or code markers among those that have been published is approximately five per cent lower compared with pre-prints that have not been published (Table \@ref(tab:open-published-summary)).
 
 ```{r open-published-summary}
-published_open_status <- 
+# Maybe find a way to use the data frames constructed above instead of constructing new ones?
+med_published_open_status <- 
   med_open_data_results %>% 
   select(title, date, published, is_open_code, is_open_data) %>% 
-  mutate(condition = is_open_data + is_open_code)
+  mutate(condition = is_open_data + is_open_code, repo = "medRxiv")
+
+bio_published_open_status <- 
+  bio_open_data_results %>% 
+  select(title, date, published, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code, repo = "bioRxiv")
+
+published_open_status <- rbind(med_published_open_status, bio_published_open_status)
+
+
 published_open_status$condition[published_open_status$condition == 2] <- "Both"
 published_open_status$condition[published_open_status$condition == 0] <- "Neither"
 published_open_status$condition[published_open_status$condition == 1 & published_open_status$is_open_code == 1] <- "Open code"
 published_open_status$condition[published_open_status$condition == 1 & published_open_status$is_open_data == 1] <- "Open data"
 
-published_open_status %>% 
-  count(published, condition) %>% 
+published_open_status %>%
+  count(repo, published, condition) %>% 
   pivot_wider(names_from = condition, values_from = n) %>%
-  mutate(published = ifelse(published == 0, "No", "Yes"), `Proportion with either/both`= round((`Open data` + `Open code` + Both)/(`Open data` + `Open code` + Both + Neither), 2)) %>%
-  rename(Published = published) %>%
+  mutate(Published = ifelse(published == 0, "No", "Yes"), `Proportion with either/both`= round((`Open data` + `Open code` + Both)/(`Open data` + `Open code` + Both + Neither), 2)) %>%
+  select(Published, Both, Neither, `Open code`, `Open data`, `Proportion with either/both`) %>%
   kable(caption = "Counts and proportions of open data markers by whether the pre-print was published",
-        booktabs = TRUE)
+        booktabs = TRUE) %>%
+  group_rows(index = c("bioRxiv" = 2, "medRxiv" = 2))
 ```
 
 
@@ -217,14 +303,17 @@ published_open_status$published[published_open_status$published == 0] <- "Publis
 published_open_status$published[published_open_status$published == 1] <- "Unpublished"
 
 published_open_status %>% 
-  # mutate(published = ifelse(published == 0, "Unpublished", "Published")) +
+  mutate(published = ifelse(published == 0, "Unpublished", "Published")) %>%
   ggplot() + 
   geom_bar(aes(x = published, fill=factor(condition, levels = c("Neither", "Open code", "Open data", "Both")), position = "stack")) +
   labs(fill = "Type of marker",
        y = "Number of pre-prints",
        x = "Publication status") +
   ggtitle("Pre-prints by publication status") +
-  theme_minimal()
+  theme_minimal() +
+  facet_wrap(~repo) + 
+  scale_fill_manual(values = wes_palette("Darjeeling1"))
+  
 ```
 
 It is important to note that our dataset imperfectly characterizes publication. In particular, it does not have the publication details for some papers that were published. And even if it were a perfect record, there is a publication lag (estimated at an average of around 60 days) that may skew the results [@kwon2020].
@@ -239,13 +328,31 @@ To characterize the pre-prints by type, we performed keyword searches within the
 ```{r stack-by-type, fig.cap= "Number of pre-prints in sample with open data or open code markers by type", out.width="90%", fig.align = "center"}
 
 # Number of open data/code papers by keyword for different types
-paper_type_keywords <- 
+med_paper_type_keywords <- 
   med_open_data_results %>% select(title, abstract, date, is_open_code, is_open_data) %>% 
-  mutate(condition = is_open_data + is_open_code)
+  mutate(condition = is_open_data + is_open_code, repo = "medRxiv")
+
+bio_paper_type_keywords <- 
+  bio_open_data_results %>% select(title, abstract, date, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code, repo = "bioRxiv")
+
+arxiv_paper_type_keywords <- 
+  arxiv_open_data_results %>% select(title, abstract, submitted, is_open_code, is_open_data) %>% 
+  rename(date = submitted) %>%
+  mutate(condition = is_open_data + is_open_code, repo = "arXiv")
+
+socarxiv_paper_type_keywords <- 
+  socarxiv_open_data_results %>% select(title, description, date_created, is_open_code, is_open_data) %>% 
+  rename(date = date_created, abstract = description) %>%
+  mutate(condition = is_open_data + is_open_code, repo = "socArXiv")
+
+paper_type_keywords <- rbind(med_paper_type_keywords, bio_paper_type_keywords, arxiv_paper_type_keywords, socarxiv_paper_type_keywords)
+  
 paper_type_keywords$condition[paper_type_keywords$condition == 2] <- "Both"
 paper_type_keywords$condition[paper_type_keywords$condition == 0] <- "Neither"
-paper_type_keywords$condition[paper_type_keywords$condition == 1 & open_status$is_open_code == 1] <- "Open code"
-paper_type_keywords$condition[paper_type_keywords$condition == 1 & open_status$is_open_data == 1] <- "Open data"
+paper_type_keywords$condition[paper_type_keywords$condition == 1 & paper_type_keywords$is_open_code == 1] <- "Open code"
+paper_type_keywords$condition[paper_type_keywords$condition == 1 & paper_type_keywords$is_open_data == 1] <- "Open data"
+
 paper_type_keywords$`Machine Learning` <- str_detect( paper_type_keywords$title, "machine learning") | 
                                           str_detect( paper_type_keywords$abstract, "machine learning")
 paper_type_keywords$Simulation <- str_detect( paper_type_keywords$title, "simulate|simulation|simulating") | 
@@ -257,27 +364,32 @@ paper_type_keywords <- paper_type_keywords %>%
   filter(Value == TRUE)
 
 # # Plot
-# paper_type_keywords %>% ggplot() + 
-#   geom_bar(aes(x = Type, fill=factor(condition, levels = c("Neither", "Open code", "Open data", "Both")), position = "stack")) +
-#   labs(fill = "Type of marker") +
-#   scale_x_discrete(labels=c("Machine learning", "Modelling", "Simulation")) +
-#   ylab("Number of pre-prints") +
-#   xlab("Month") +
-#   ggtitle("Sampled pre-prints by type") +
-#   theme_minimal()
+paper_type_keywords %>% ggplot() +
+  geom_bar(aes(x = Type, fill=factor(condition, levels = c("Neither", "Open code", "Open data", "Both")), position = "stack")) +
+  labs(fill = "Type of marker") +
+  scale_x_discrete(labels=c("Machine learning", "Modelling", "Simulation")) +
+  ylab("Number of pre-prints") +
+  xlab("Month") +
+  ggtitle("Sampled pre-prints by type") +
+  theme_minimal() +
+  scale_fill_manual(values = wes_palette("Darjeeling1")) +
+  facet_wrap(~repo)
+
 ```
 
 
 ```{r summary-by-type}
 paper_type_keywords %>% 
-  count(Type, condition) %>% 
+  count(repo, Type, condition) %>% 
   pivot_wider(names_from = condition, values_from = n, values_fill = 0) %>% 
   mutate(Type = if_else(Type == "modelling", "Modelling", Type),
          Type = if_else(Type == "Machine Learning", "Machine learning", Type),
          ) %>% 
   mutate(`Proportion with either/both`= round((`Open data` + `Open code` + Both)/(`Open data` + `Open code` + Both + Neither), 2)) %>%
+  select(!repo) %>%
   kable(caption = "Counts and proportions of open data markers by the type of pre-print",
-        booktabs = TRUE)
+        booktabs = TRUE) %>%
+  group_rows(index = c("arxiv" = 3, "bioRxiv" = 3, "medRxiv" = 3, "socArXiv" = 3))
 ```
 
 
@@ -350,9 +462,9 @@ The proportion of pre-prints with open data or code markers is significantly hig
 
 Transparency and reproducibility are hallmarks of quality scientific research. Open data and open code contribute greatly to both in allowing the scientific community to more easily verify the authenticity of purported scientific discovery and its supporting evidence, which is especially important in cases where scientific research may quickly and directly impact clinical practice or policy such as during the COVID-19 pandemic. Among a myriad of other impacts on biomedical research, COVID-19 has dramatically increased the popularity of pre-prints from both a production and consumption stand-point. The number of COVID-19 pre-prints posted to medRxiv increased dramatically in the early stages of the pandemic while non-COVID-19 pre-print rates remained consistent. The same trends were apparent in abstracts accessed by medRxiv users, where COVID-19 pre-print abstracts were viewed over 15 times the rate of non-COVID-19 pre-print abstracts [@citeFraser]. For these reasons, it is more important now than ever to examine open science standards and reproducibility within pre-print repositories.
 
-Open data is generally accepted to be beneficial to the scientific process, and to a paper's reproducibility potential, hence it is concerning that over 80 per cent of pre-prints in our sample contained no open data markers. This concern is slightly mitigated by recognition of challenges in working with biomedical data compared with data in other fields, notably privacy and ethics concerns when working with personal data [@Floca2014]. The COVID-19 pandemic has seen an uptake in open science practices globally, as evidenced by the creation of open data repositories such as the dashboard maintained by the Center for Systems Science and Engineering at Johns Hopkins University [@citeCSSE] or the large number of publishers who have removed paywalls from published COVID-19 research [@gill2020]. An important next step may compare open data and code availability in COVID-19 pre-prints with those from other topics posted to medRxiv to examine whether the pandemic has increased transparency from the previous norm.
+Open data is generally accepted to be beneficial to the scientific process, and to a paper's reproducibility potential, hence it is concerning that over 80 per cent of pre-prints in our sample contained no open data markers. This concern is slightly mitigated by recognition of challenges in working with biomedical data compared with data in other fields, notably privacy and ethics concerns when working with personal data [@Floca2014]. The COVID-19 pandemic has seen an uptake in open science practices globally, as evidenced by the creation of open data repositories such as the dashboard maintained by the Center for Systems Science and Engineering at Johns Hopkins University [@citeCSSE] or the large number of publishers who have removed paywalls from published COVID-19 research [@gill2020]. (MENTION/REFERENCE https://wellcome.org/coronavirus-covid-19/open-data ?) An important next step may compare open data and code availability in COVID-19 pre-prints with those from other topics posted to medRxiv to examine whether the pandemic has increased transparency from the previous norm.
 
-Open code as an open science marker is much more context and field-dependent, as not all biomedical research papers will rely on computational methods for their analyses. However, in pre-prints where code comprises a large portion of the methodology or results, posting it openly to repositories like GitHub contributes greatly to a pre-print's potential reproducibility. This gains importance as computational methods become increasingly popular in the rush to form predictions about emerging situations with limited data or laboratory research, which was the case for modelling studies in the early days of the COVID-19 pandemic (CITE). We also see growing concern over the quality and consequences of this sort of research, with bioRxiv not allowing purely computational work [@kwon2020].
+Open code as an open science marker is much more context and field-dependent, as not all biomedical research papers will rely on computational methods for their analyses. However, in pre-prints where code comprises a large portion of the methodology or results, posting it openly to repositories like GitHub contributes greatly to a pre-print's potential reproducibility. This gains importance as computational methods become increasingly popular in the rush to form predictions about emerging situations with limited data or laboratory research, which was the case for modelling studies in the early days of the COVID-19 pandemic (CITE). We also see growing concern over the quality and consequences of this sort of research, with bioRxiv no longer allowing purely computational work [@kwon2020].
 
 ## The role of of pre-print repositories
 
