Update paper to bring it to almost draft

--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,3 +1,84 @@
+@article{mcguinness2021descriptive,
+  title={A descriptive analysis of the data availability statements accompanying medRxiv preprints and a comparison with their published counterparts},
+  author={McGuinness, Luke A and Sheppard, Athena L},
+  journal={PloS one},
+  volume={16},
+  number={5},
+  pages={e0250887},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{king2017computer,
+  title={Computer-Assisted Keyword and Document Set Discovery from Unstructured Text},
+  author={King, Gary and Lam, Patrick and Roberts, Margaret E},
+  journal={American Journal of Political Science},
+  volume={61},
+  number={4},
+  pages={971--988},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{da2021publishing,
+  title={Publishing volumes in major databases related to Covid-19},
+  author={da Silva, Jaime A Teixeira and Tsigaris, Panagiotis and Erfanmanesh, Mohammadamin},
+  journal={Scientometrics},
+  volume={126},
+  number={1},
+  pages={831--842},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{da2021optimizing,
+  title={Optimizing peer review to minimize the risk of retracting COVID-19-related literature},
+  author={da Silva, Jaime A Teixeira and Bornemann-Cimenti, Helmar and Tsigaris, Panagiotis},
+  journal={Medicine, Health Care and Philosophy},
+  volume={24},
+  number={1},
+  pages={21--26},
+  year={2021},
+  publisher={Springer}
+}
+
+@Manual{citeWellcome,
+    title = {Sharing research data and findings relevant to the novel coronavirus (COVID-19) outbreak},
+    author = {{Wellcome Trust}},
+    organization = {Wellcome Trust},
+    address = {Vienna, Austria},
+    year = {2020},
+    url = {https://wellcome.org/coronavirus-covid-19/open-data},
+  }
+
+
+@Manual{citeR,
+    title = {{R: A Language and Environment for Statistical Computing}},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2020},
+    url = {https://www.R-project.org/},
+  }
+
+@Manual{citealexandermafouz,
+    title = {{heapsofpapers: Easily Download Heaps of Papers}},
+    author = {Rohan Alexander and A Mahfouz},
+    year = {2021},
+    note = {R package version 0.1.0},
+    url = {https://rohanalexander.github.io/heapsofpapers/},
+  }
+@article{da2021publishing,
+  title={Publishing volumes in major databases related to Covid-19},
+  author={da Silva, Jaime A Teixeira and Tsigaris, Panagiotis and Erfanmanesh, Mohammadamin},
+  journal={Scientometrics},
+  volume={126},
+  number={1},
+  pages={831--842},
+  year={2021},
+  publisher={Springer}
+}
+
 @Manual{citeODDPubpackage,
     title = {oddpub: Detection of Open Data & Open Code statements in biomedical
 publications},
@@ -22,7 +103,7 @@ publications},
 
 
 @Article{citemedrxivr,
-    title = {medrxivr: Accessing and searching medRxiv and bioRxiv preprint data in R},
+    title = {{medrxivr: Accessing and searching medRxiv and bioRxiv preprint data in R}},
     author = {Luke A. McGuinness and Lena Schmidt},
     journal = {Journal of Open Source Software},
     year = {2020},
