--- a/outputs/paper/paper-copy.Rmd
+++ b/outputs/paper/paper-copy.Rmd
@@ -5,7 +5,7 @@ author:
   - Rohan Alexander^[University of Toronto, rohan.alexander@utoronto.ca.]
 thanks: "Collins thanks CANSSI Ontario for financial support. Code and data are available at: https://github.com/anniecollins/reproducibility."
 date: "`r format(Sys.time(), '%d %B %Y')`"
-abstract: "We create a dataset of pre-prints posted to arXiv, bioRxiv, medRxiv, and SocArXiv between 28 January 2020 and 1 May 2021 that are related to COVID-19. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. For the pre-prints that are in our sample, we are unable to find markers of either open data or open code for 76 per cent of those on arXiv, 68 per cent of those on bioRxiv, 80 per cent of those on medRxiv, and 83 per cent of those on SocArXiv. We conclude that there may be value in having authors categorize the degree of openness of their pre-print as part of the pre-print submissions process, and more broadly, the need to better integrate open science training into a wide range of fields."
+abstract: "We create a dataset of pre-prints posted to arXiv, bioRxiv, medRxiv, and SocArXiv between 28 January 2020 and 30 June 2021 that are related to COVID-19. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. For the pre-prints that are in our sample, we are unable to find markers of either open data or open code for 76 per cent of those on arXiv, 68 per cent of those on bioRxiv, 80 per cent of those on medRxiv, and 83 per cent of those on SocArXiv. We conclude that there may be value in having authors categorize the degree of openness of their pre-print as part of the pre-print submissions process, and more broadly, the need to better integrate open science training into a wide range of fields."
 output:
   bookdown::pdf_document2:
 toc: FALSE
@@ -56,8 +56,6 @@ all_arxiv_2019_results <-
 
 socarxiv_open_data_results <- 
   read_csv(here::here("outputs/data/socarxiv_open_data_results.csv"))
-socarxiv_results <- 
-  read_csv(here::here("outputs/data/socarxiv_results.csv")) # All COVID medRxiv papers (410). Same as socarxiv_sample.  
 socarxiv_2019_open_data_results <- 
   read_csv(here::here("outputs/control-data/socarxiv_2019_open_data_results.csv"))
 socarxiv_metadata_2019 <- 
@@ -74,7 +72,7 @@ all_arxiv_results <-
 
 Scientists use open repositories of papers to disseminate their research more quickly than is possible in traditional journals or conference proceedings. These repositories, such as arXiv, bioRxiv, medRxiv, and SocArXiv, are a critical component of scientific communication and many results build on the pre-prints posted there. Pre-print repositories have been especially important during the 2019 novel coronavirus (COVID-19) pandemic and the changes it has imposed on the scientific community [@else2020]. The centrality of pre-prints to science means that it is important that the results that are posted are credible. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a pre-print.
 
-Neither peer-review nor credentials are a panacea nor a guarantee of quality. And the gate-keeping and slow publication times of traditional journals mean pre-print repositories have an important role to play. But it is important that scientists impose standards on themselves, and arguably repositories have a role to play here. Following @weissgerber2021automated we examine pre-prints about COVID-19 posted to arXiv, bioRxiv, medRxiv, and SocArXiv from 28 January 2020 through to 1 May 2021. We search for markers of open science as indicators of reproducibility, specifically open data and open code. 
+Neither peer-review nor credentials are a panacea nor a guarantee of quality. And the gate-keeping and slow publication times of traditional journals mean pre-print repositories have an important role to play. But it is important that scientists impose standards on themselves, and arguably repositories have a role to play here. Following @weissgerber2021automated we examine pre-prints about COVID-19 posted to arXiv, bioRxiv, medRxiv, and SocArXiv from 28 January 2020 through to 30 June 2021. We search for markers of open science as indicators of reproducibility, specifically open data and open code. 
 
 We find that of the papers sampled, approximately 76 per cent of papers from arXiv, 68 per cent of papers from bioRxiv, 80 per cent of papers from medRxiv, and 83 per cent of papers from SocArXiv contain neither open data nor open code markers. A summary of our main results is contained in Figure \@ref(fig:flowchart). Examining trends over time, we find that the proportion of pre-prints containing open data or code markers has fluctuated but shown no obvious trend throughout the pandemic. We also find that the presence of open data or open code markers seems to have little association with a pre-print's subsequent publication, and the subset of sampled pre-prints that have been published contains approximately the same proportion of papers with these markers. 
 <!-- Finally, we briefly examine the presence of open data and code markers in specific types of pre-prints, namely modelling, simulation, and machine learning research. -->
@@ -87,22 +85,22 @@ graph [layout = dot, rankdir = TB]
 # define the global styles of the nodes. We can override these in box if we wish
 node [shape = rectangle]
 
-all [label =  'All pre-prints posted between 28 January 2020 and 1 May 2021']
+all [label =  'All pre-prints posted between 28 January 2020 and 30 June 2021']
 onlycovid [label =  'Those about COVID-19']
-arxivcovidcount [label =  'arXiv: 3,896 pre-prints']
-biorxivcovidcount [label =  'bioRxiv: 3,714 pre-prints']
-medrxivcovidcount [label =  'medRxiv: 12,060 pre-prints']
-socarxivcovidcount [label =  'SocArXiv: 410 pre-prints']
+arxivcovidcount [label =  'arXiv: 4,250 pre-prints']
+biorxivcovidcount [label =  'bioRxiv: 4,146 pre-prints']
+medrxivcovidcount [label =  'medRxiv: 13,194 pre-prints']
+socarxivcovidcount [label =  'SocArXiv: 478 pre-prints']
 randomsample [label =  'Random sampling stratified by repository']
 arxivsamplecount [label =  'arXiv: 1,000 pre-prints']
 biorxivsamplecount [label =  'bioRxiv: 1,000 pre-prints']
 medrxivsamplecount [label =  'medRxiv: 1,500 pre-prints']
-socarxivsamplecount [label =  'SocArXiv: 410 pre-prints']
+socarxivsamplecount [label =  'SocArXiv: 478 pre-prints']
 opencodeanddata [label =  'Those with markers of open code and open data']
-arxivopencount [label =  'arXiv: 104 pre-prints']
-biorxivopencount [label =  'bioRxiv: 78 pre-prints']
-medrxivopencount [label =  'medRxiv: 101 pre-prints']
-socarxivopencount [label =  'SocArXiv: 17 pre-prints']
+arxivopencount [label =  'arXiv: 248 pre-prints']
+biorxivopencount [label =  'bioRxiv: 326 pre-prints']
+medrxivopencount [label =  'medRxiv: 320 pre-prints']
+socarxivopencount [label =  'SocArXiv: 73 pre-prints']
 
 # edge definitions with the node IDs
 all -> onlycovid -> {arxivcovidcount biorxivcovidcount medrxivcovidcount socarxivcovidcount} -> randomsample -> {arxivsamplecount biorxivsamplecount medrxivsamplecount socarxivsamplecount} -> opencodeanddata -> {arxivopencount biorxivopencount medrxivopencount socarxivopencount}
@@ -118,9 +116,9 @@ The remainder of this paper is structured as follows: in Section \@ref(methodolo
 
 Our primary dataset consists of pre-print metadata extracted from the arXiv, bioRxiv, medRxiv, and SocArXiv pre-print repositories via their respective Application Programming Interfaces (APIs). This metadata varies by repository, but generally includes the following information: title, abstract, author(s), date created, research field, DOI, version number, corresponding author, corresponding author's institutional affiliation, published DOI (if the pre-print has since been published in a peer-reviewed journal), and download link. The data collection process was conducted separately for COVID-19 and pre-COVID-19 papers. 
 
-For COVID-19-related pre-prints, we first created a local copy of each repository containing all metadata for pre-prints posted between January 1, 2020, and May 1, 2021. In the case of SocArXiv there are fields that are self-reported by the submitting author about the availability of code and data. We classified individual pre-prints as "COVID-19-related" based on whether they contained one or more of the following terms in their title or abstract (case insensitive): "COVID-19", "COVID 19", "corona virus", "coronavirus", "coronavirus-2", "SARS-CoV-2", "SARSCoV-2", or "2019-nCoV". Future work could make this keyword approach more systematic, for instance following @king2017computer. We then randomly sampled pre-prints for further analysis, except for SocArXiv for which we analyzed all pre-prints that matched the above criteria as there were only 410.
+For COVID-19-related pre-prints, we first created a local copy of each repository containing all metadata for pre-prints posted between 1 January, 2020, and 30 June, 2021. In the case of SocArXiv there are fields that are self-reported by the submitting author about the availability of code and data. We classified individual pre-prints as "COVID-19-related" based on whether they contained one or more of the following terms in their title or abstract (case insensitive): "COVID-19", "COVID 19", "corona virus", "coronavirus", "coronavirus-2", "SARS-CoV-2", "SARSCoV-2", or "2019-nCoV". Future work could make this keyword approach more systematic, for instance following @king2017computer. We then randomly sampled pre-prints for further analysis, except for SocArXiv for which we analyzed all pre-prints that matched the above criteria as there were only 410.
 
-For pre-COVID-19 pre-prints, we created a local copy of each repository containing all metadata for pre-prints posted between January 1, 2019, and December 31, 2019. Since medRxiv was launched in June 2019, we used all pre-print data from the latter half of 2019. We then randomly sampled 1,200 pre-prints from each repository's dataset for analysis, with the exception of medRxiv for which only 913 pre-prints were available over this time.
+For pre-COVID-19 pre-prints, we created a local copy of each repository containing all metadata for pre-prints posted between 1 January, 2019, and December 31, 2019. Since medRxiv was launched in June 2019, we used all pre-print data from the latter half of 2019. We then randomly sampled 1,200 pre-prints from each repository's dataset for analysis, with the exception of medRxiv for which only 913 pre-prints were available over this time.
 
 
 ## Open data and code detection
@@ -149,24 +147,26 @@ just_bioRxiv <-
   mutate(type = "bioRxiv")
 
 just_socarxiv <- 
-  socarxiv_results  %>% 
+  socarxiv_open_data_results  %>% 
   select(date_created) %>%
   rename(date = "date_created") %>%
-  mutate(type = "SocArXiv")
+  mutate(date = as.Date(date), type = "SocArXiv")
 
 all <- rbind(just_arxiv, just_medRxiv, just_bioRxiv, just_socarxiv)
 
 all %>% 
   mutate(month = floor_date(date, "month")) %>% 
   filter(year(date) >= 2020) %>%
-  filter(date < "2021-05-01") %>% 
+  filter(date < "2021-06-30") %>% 
   ggplot(aes(x = month)) + 
   geom_histogram(aes(fill = type), stat="count", position = "dodge") + 
   labs(title = "COVID-19-related pre-prints posted per month",
-       subtitle = "Total of 3,896 relevant pre-prints on arXiv, 3,714 on bioRxiv, 12,060 on medRxiv, and \n410 on SocArXiv.",
+       subtitle = "Total of 4,250 relevant pre-prints on arXiv, 4,146 on bioRxiv, 13,194 on medRxiv, and \n478 on SocArXiv.",
        x = "Month",
        y = "Number of pre-prints",
        fill = "Repository") +
+  scale_x_date(breaks=as.Date(c("2020-01-01","2020-07-01", "2021-01-01", "2021-07-01")), 
+                   labels=c("Jan 2020", "Jul 2020", "Jan 2021", "Jul 2021")) +
   theme_minimal() +
   scale_fill_manual(values = wes_palette("Darjeeling1"))
 ```
@@ -181,9 +181,9 @@ The number of pre-prints posted per month increased in the first half of 2020 ac
 
 ## Open data and code
 
-From that collection of all pre-prints related to COVID-19 we randomly sampled 3,910 pre-prints to analyze, stratified by repository. This sample is broken down as follows: 1,500 from medRxiv, 1,000 from arXiv, 1,000 from bioRxiv, and 410 from SocArXiv. Broadly, we are unable to find markers of either open data for open code for 2,987 pre-prints or approximately 76 per cent of our sample (Table \@ref(tab:summarycounts-repositories)). Of the remaining pre-prints, 6 per cent contained open code markers only, 10 per cent contained open data markers only, and 8 per cent included markers of both open data and open code.
+From the collection of all pre-prints related to COVID-19 we randomly sampled 3,910 pre-prints to analyze, stratified by repository. This sample is broken down as follows: 1,500 from medRxiv, 1,000 from arXiv, 1,000 from bioRxiv, and 410 from socArXiv. Broadly, we are unable to find markers of either open data for open code for 3,011 pre-prints or approximately 76 per cent of our sample (Table \@ref(tab:summarycounts-repositories)). Of the remaining pre-prints, 7 per cent contained open code markers only, 10 per cent contained open data markers only, and 8 per cent included markers of both open data and open code.
 
-Once differentiated by repository, we observe that open data and code markers were absent from 68 per cent of the sampled bioRxiv pre-prints, 80 per cent of the sampled medRxiv pre-prints, 76 per cent of the sampled arXiv pre-prints, and 83 per cent of all COVID-19-related SocArXiv pre-prints. The distribution of the remaining portion of pre-prints also varies by repository (Table \@ref(tab:summarycounts-repositories)). Notably, 28 per cent of sampled pre-prints from bioRxiv contained open data markers and 20 per cent of sampled arXiv pre-prints contained markers of open code, the highest proportions of any repository for each type of marker. Our results are broadly similar to @mcguinness2021descriptive, who focus on medRxiv and find that 23 per cent describe open data.
+Once differentiated by repository, we observe that open data and code markers were absent from 67 per cent of the sampled bioRxiv pre-prints, 79 per cent of the sampled medRxiv pre-prints, 75 per cent of the sampled arXiv pre-prints, and 85 per cent of all COVID-19-related SocArXiv pre-prints. The distribution of the remaining portion of pre-prints also varies by repository (Table \@ref(tab:summarycounts-repositories)). Notably, 28 per cent of sampled pre-prints from bioRxiv contained open data markers and 22 per cent of sampled arXiv pre-prints contained markers of open code, the highest proportions of any repository for each type of marker. Our results are broadly similar to @mcguinness2021descriptive, who focus on medRxiv and find that 23 per cent describe open data.
 
 ```{r, summarycounts-overall}
 just_arxiv <-
@@ -320,7 +320,7 @@ arxiv_month_sum_cov <-
 
 socarxiv_month_sum_cov <- 
   socarxiv_open_data_results %>% 
-  group_by(month = floor_date(date_created, "month")) %>% 
+  group_by(month = floor_date(as.Date(date_created), "month")) %>% 
   summarise(count = n(), "Open Code" = mean(is_open_code), "Open Data" = mean(is_open_data)) %>% 
   mutate(daily_rate = count/days_in_month(month), repo = "SocArXiv")
 
@@ -343,7 +343,7 @@ month_sum_cov <- rbind(med_month_sum_cov, bio_month_sum_cov, arxiv_month_sum_cov
 
 ## Publication status
 
-Our metadata also contains an indication of whether a pre-print has been published, in the form of a DOI linking to the corresponding published paper. The proportion of pre-prints that have been published varies by repository (Table \@ref(tab:published-sample-summary)). Notably, of all COVID-19-related pre-prints in our dataset, approximately one third of those posted to bioRxiv, and nearly 30 per cent of those posted to medRxiv, were published in peer-reviewed journals. This is high in comparison to the proportions from arXiv and SocArXiv and may reflect the attention that pre-prints concerning research from the biomedical and life sciences have received throughout the pandemic.
+Our metadata also contains an indication of whether a pre-print has been published, in the form of a DOI linking to the corresponding published paper. The proportion of pre-prints that have been published varies by repository (Table \@ref(tab:published-sample-summary)). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv, and nearly one third of those posted to medRxiv, were published in peer-reviewed journals. This is high in comparison to the proportions from arXiv and SocArXiv, and although this might suggest that COVID-19-related pre-prints have received greater attention overall than pre-prints from other fields, our results in Section \@ref(pre-pandemic pre-prints) suggest that this pattern pre-dates the pandemic.
 
 ```{r published-sample-summary}
 med_published <- 
@@ -363,7 +363,7 @@ arxiv_published <-
   rename(published = doi, date = submitted)
 
 socarxiv_published <- 
-  socarxiv_results %>% 
+  socarxiv_open_data_results %>% 
   select(title, date_created, links.doi) %>%
   mutate(links.doi = as.numeric(!is.na(links.doi)), repo = "SocArXiv") %>%
   rename(published = links.doi, date = date_created)
@@ -380,7 +380,7 @@ published %>%
         format.args = list(big.mark = ","))
 ```
 
-In Table \@ref(tab:open-published-summary) we disaggregate sampled pre-prints by whether there is an indication of publication. We find that the proportion of pre-prints with open data or code markers among those that have been published is roughly the same as pre-prints that have not been published, differing by one per cent only within the bioRxiv and arXiv samples, and three per cent in the SocArXiv sample.
+In Table \@ref(tab:open-published-summary) we disaggregate sampled pre-prints by whether there is an indication of publication. We find that the proportion of pre-prints with open data or code markers among those that have been published is roughly the same as pre-prints that have not been published, differing by one per cent only within the bioRxiv and medRxiv samples, and three per cent in the arXiv sample.
 
 ```{r open-published-summary}
 # Maybe find a way to use the data frames constructed above instead of constructing new ones?
@@ -437,17 +437,17 @@ published_open_status %>%
 # published_open_status$published[published_open_status$published == 0] <- "Published"
 # published_open_status$published[published_open_status$published == 1] <- "Unpublished"
 
-published_open_status %>% 
-  mutate(published = ifelse(published == 0, "Unpublished", "Published")) %>%
-  ggplot() + 
-  geom_bar(aes(x = published, fill=factor(condition, levels = c("Neither", "Open code", "Open data", "Both")), position = "stack")) +
-  labs(fill = "Type of marker",
-       y = "Number of pre-prints",
-       x = "Publication status") +
-  ggtitle("Pre-prints by publication status") +
-  theme_minimal() +
-  facet_wrap(~repo) + 
-  scale_fill_manual(values = wes_palette("Darjeeling1"))
+# published_open_status %>% 
+#   mutate(published = ifelse(published == 0, "Unpublished", "Published")) %>%
+#   ggplot() + 
+#   geom_bar(aes(x = published, fill=factor(condition, levels = c("Neither", "Open code", "Open data", "Both")), position = "stack")) +
+#   labs(fill = "Type of marker",
+#        y = "Number of pre-prints",
+#        x = "Publication status") +
+#   ggtitle("Pre-prints by publication status") +
+#   theme_minimal() +
+#   facet_wrap(~repo) + 
+#   scale_fill_manual(values = wes_palette("Darjeeling1"))
   
 ```
 
@@ -455,7 +455,7 @@ It is important to note that our dataset likely imperfectly characterizes public
 
 ## Pre-pandemic pre-prints
 
-In order to examine the influence of the COVID-19 pandemic on open science practices in during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories using the same process as was done for the COVID-19-related pre-prints. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For bioRxiv, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
+In order to examine the influence of the COVID-19 pandemic on open science practices in during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories using the same process as was done for the COVID-19-related pre-prints. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
 
 ```{r 2019-results}
 bio_2019 <- bio_2019_results %>%
@@ -534,9 +534,11 @@ all_2019 %>%
   group_rows(index = c("arXiv" = 4, "bioRxiv" = 4, "medRxiv" = 4, "socArXiv" = 4))
 ```
 
-Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase which may be expected as the repository gained recognition and popularity in the medical research community. The number of papers posted monthly to bioRxiv also saw an overall increase throughout 2019. It is important to note here that due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 19,280 pre-prints were been posted to medRxiv between June 2019 and May 1, 2021, 12,060 (approximately 63 per cent) of which relate to COVID-19.
+Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase which may be expected as the repository gained recognition and popularity in the medical research community. The number of papers posted monthly to bioRxiv also saw an overall increase throughout 2019. It is important to note here that due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 21,647 pre-prints were been posted to medRxiv between June 2019 and 30 June, 2021, 13,194 (approximately 61 per cent) of which relate to COVID-19.
 
-Of the analyzed pre-prints from 2019, 63 per cent of those posted to bioRxiv and 75 per cent of those posted to medRxiv showed no indication of open data or open code (Table \@ref(tab:2019-published)). Both rates are approximately five per cent lower than the corresponding proportions of COVID-19-related pre-prints, suggesting that the analyzed pre-prints from 2019 may contain an overall higher prevalence of open data and code markers than pre-prints concerning COVID-19. Specifically, we found that open data availability in medRxiv pre-prints was significantly associated with a pre-pandemic registration date (chi-squared = 8.225, p < 0.005), as was open code availability for bioRxiv pre-prints (chi-squared = 15.028, p < 0.005). This would suggest that open data and code practices may have suffered in the context of COVID-19.
+Of the analyzed pre-prints from 2019, 93 per cent of those posted to arXiv, 63 per cent of those posted to bioRxiv, 75 per cent of those posted to medRxiv, 92 per cent of those posted to SocArXiv showed no indication of open data or open code (Table \@ref(tab:2019-published)). Both the bioRxiv and medRxiv rates are approximately four per cent lower than the corresponding proportions of COVID-19-related pre-prints, suggesting that the analyzed pre-prints from 2019 may contain an overall higher prevalence of open data and code markers than pre-prints concerning COVID-19. Specifically, we found that open data availability in medRxiv pre-prints was significantly associated with a pre-pandemic registration date ($\chi$^2^ = 4.8508, p < 0.005), as was open code availability for bioRxiv pre-prints ($\chi$^2^ = 14.491, p < 0.005). This would suggest that open data and code practices may have suffered in the context of COVID-19. 
+
+On the other hand, the analyzed arXiv and socArXiv pre-prints from 2019 contain a lower proportion of open data and code markers overall than their COVID-19-related counterparts, with a decrease of seven per cent in sampled SocArXiv pre-prints and 18 per cent in sampled arXiv papers. For these repositories, the presence of both open data and open code markers was significantly associated with registration *during* the pandemic, suggesting that pre-prints related to COVID-19 in arXiv and socArXiv more consistently adhered to open science practices than their pre-pandemic counterparts ($\chi$^2^ = 93.124, arXiv open data;  $\chi$^2^ = 106.88, arXiv open code; $\chi$^2^ = 12.303, socArXiv open data; $\chi$^2^ = 8.1598, socArXiv open code; p < 0.005).
 
 
 ```{r 2019-published}
@@ -619,7 +621,7 @@ published_2019_open_status %>%
   group_rows(index = c("arXiv" = 2, "bioRxiv" = 2, "medRxiv" = 2, "socArXiv" = 2))
 ```
 
-Examining publication rates for pre-pandemic papers, we observe that 64 per cent of pre-prints posted to bioRxiv and 61 per cent of pre-prints posted to medRxiv during 2019 were eventually peer reviewed and published (Table \@ref(tab:2019-published)). These rates are approximately double those of the COVID-19-related pre-prints posted during 2020 and 2021 (33 per cent and 31 per cent from bioRxiv and medRxiv respectively). When disaggregated by open data and code status, we find that published and unpublished pre-prints contain open data and code markers in similar proportions (Table \@ref(tab:2019-open-publishing)). This mimics the behaviour of published and unpublished COVID-19-related pre-prints.
+Examining publication rates for pre-pandemic papers, we observe that 41 per cent of pre-prints posted to arXiv, 64 per cent of pre-prints posted to bioRxiv, 61 per cent of pre-prints posted to medRxiv, and 37 per cent of pre-prints posted to SocArXiv during 2019 were eventually peer reviewed and published (Table \@ref(tab:2019-published)). These rates are at least double those of the COVID-19-related pre-prints posted in each repository during 2020 and 2021 (33 per cent and 31 per cent from bioRxiv and medRxiv respectively). When disaggregated by open data and code status, we find that published and unpublished pre-prints contain open data and code markers in similar proportions (Table \@ref(tab:2019-open-publishing)). This mimics the behaviour of published and unpublished COVID-19-related pre-prints.
 
 
 # Discussion
